# cryptopals-rust-solutions

./: Cargo.toml  rust-toolchain.toml
src/: encoding.rs  encoding_simd.rs  main.rs  tests.rs
