[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Rolph Recto <rolph.recto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = ">=0.0.0"
bitvec = ">=0.22.3"
rand = "0.8.5"
time-test = "0.2.3"